--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start-dev": "nodemon index.js",
+    "start-dev": "node index.js",
     "build": "npm i",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
